--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mime-types": "^2.1.35",
     "pino": "^8.19.0",
     "qrcode": "^1.5.3",
+    "react-router-dom": "*",
     "qrcode-terminal": "^0.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
